# image-noise-gate

./: CHANGES.txt  MANIFEST.in  README.rst  pyproject.toml  setup.py
image_noise_gate/: __init__.py
noisegate/: __init__.py  tools.pyx
tests/: test-01-tools.py  test_01_tools.py
